Test/errors/circular/entry_a.cb
import "b.cb";

extern int main()
{
    return 0;
}
